create product sale history

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,14 @@
 /* @import "flowbite/src/themes/default"; */
 @custom-variant dark (&:where(.dark, .dark *));
 
+/* import Flowbite Vue styles */
+@import "flowbite-vue/index.css";
 
+/* import Flowbite plugin */
+@plugin "flowbite/plugin";
+
+/* add Flowbite Vue directory using @source directive */
+@source "../node_modules/flowbite-vue";
 @source "../node_modules/flowbite";
 @plugin "flowbite/plugin";
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
@@ -10,7 +17,15 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
+
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hidden {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
+  }
