--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,3 +29,12 @@
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;     /* Firefox */
   }
+.select {
+
+    --vs-border-color: #454545;
+    --vs-dropdown-bg: #282c34;
+    --vs-dropdown-color: #ffffff;
+    --vs-dropdown-option-color: #ffffff;
+    --vs-selected-color: #eeeeee;
+    --vs-search-input-color: #eeeeee;
+}
