--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,10 +31,16 @@
   }
 .select {
 
-    --vs-border-color: #454545;
+    --vs-border-color: #000000;
     --vs-dropdown-bg: #282c34;
     --vs-dropdown-color: #ffffff;
     --vs-dropdown-option-color: #ffffff;
     --vs-selected-color: #eeeeee;
     --vs-search-input-color: #eeeeee;
+    /* --vs-border-width:3px; */
+}
+.modal {
+    @apply fixed top-0 left-0 z-50;
+    background: rgba(255, 255, 255, 0.188) !important;
+    backdrop-filter: blur(1px);
 }
